<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.villezone.gautam.viewModel.LoginViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/login_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:hint="Mobile Number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:id="@+id/tvMobileNumber"
            android:text="@={viewModel.mobileNumber}"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TILPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/TILUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:id="@+id/tvPassword"
            android:text="@={viewModel.userPassword}"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TILPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:text="@string/sign_in_instead"
        android:onClick="@{()-> viewModel.onSignUpClicked()}"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:text="Login"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="@{()-> viewModel.onLoginClicked()}"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        android:layout_width="@dimen/input_height"
        android:layout_height="@dimen/input_height"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>